--- a/package.json
+++ b/package.json
@@ -13,8 +13,16 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
+    "react-slick": "^0.28.1",
+    "react-social-sharing": "^3.3.0",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
     "use-react-router-breadcrumbs": "^2.0.0",
     "web-vitals": "^1.1.2"
   },
